--- a/connectedin.por_fazer/usuarios/templates/form_redefinir_senha.html
+++ b/connectedin.por_fazer/usuarios/templates/form_redefinir_senha.html
@@ -1,4 +1,4 @@
-{% extends "base_usuario.html" %}
+ {% extends "base_usuario.html" %}
 
 {% block body %}
 <form class = "form-signin"  method="post" 
@@ -11,10 +11,10 @@
             type = "password" required placeholder="Senha atual">
     
     
-    <input 	name="nova_senha" id = "id_senha" class = "form-control"
+    <input 	name="nova_senha" id = "id_nova_senha" class = "form-control"
             type = "password" required placeholder="Nova senha">
             
-    <input 	name="confirmacao_nova_senha" id = "id_senha" class = "form-control"
+    <input 	name="confirmacao_nova_senha" id = "id_confirmacao_senha" class = "form-control"
             type = "password" required placeholder="Confirme a nova senha">
             
     <hr/>
