--- a/connectedin.por_fazer/usuarios/templates/form_redefinir_senha.html
+++ b/connectedin.por_fazer/usuarios/templates/form_redefinir_senha.html
@@ -21,7 +21,7 @@
 
 
 	<button class="btn btn-lg btn-primary btn-block"
-			type = "submit" value="Login">Salvar</button>
+			type = "submit">Salvar</button>
 
 	{% if form.errors %}		
 	<div class="alert alert-danger">
