--- a/connectedin.por_fazer/perfis/templates/base.html
+++ b/connectedin.por_fazer/perfis/templates/base.html
@@ -8,6 +8,10 @@
 			 href="{% static 'styles/bootstrap.css' %}">
 		<link rel="stylesheet" 
 			 href="{% static 'styles/main.css' %}">
+		<script
+			 src="https://code.jquery.com/jquery-3.3.1.min.js"
+			 integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			 crossorigin="anonymous"></script>
 
 	</head>
 	<body>
@@ -23,7 +27,9 @@
 			</div>
 			
 			<div class="row content">
+
 				{% block body%}
+
 				{% endblock %}				
 			</div>		
 		</div>	
