--- a/connectedin.por_fazer/perfis/templates/index.html
+++ b/connectedin.por_fazer/perfis/templates/index.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
+
+<div>
+    <form class = "form-signin"  method="post" 
+        action="{% url 'postar' %}">
+        {% csrf_token %}
+
+    <p></p><input name="texto" id="id_postagem" required style="min-width: 650px; min-height: 150px; max-width: 650px; max-height: 150px;"></p>
+    <button type="submit">Postar</button>
+    </form>
+</div>
+
 <div class="col-lg-12"> 		
 	<div class="panel panel-default">
 		<div class="panel-heading">
@@ -71,8 +82,6 @@
                                     <a class = "pull-right" href = "{% url 'aceitar' convite.id %}">aceitar |</a>
                                     
                                     
-                             
-                                
                         
                         </li>
                         
@@ -113,7 +122,33 @@
                     </div>    
                 {% endif %}
             {% endwith %}    
-        </div>    
+        </div>
+        
+        <div class="panel panel-default">
+            {% with total=posts.count %}
+                {% if total %}
+                    <div class="panel-heading">
+                        <strong> {{ total }}  
+                            Postage{{ total|pluralize }} 
+                        </strong>
+                    </div>
+                    <ul class="list-group">
+                        {% for postagem in posts %}
+                            <li class = "list-group-item">
+                                    {{ postagem }}
+                                </a>
+
+                                
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <div class="panel-body">
+                        Não há postagens
+                    </div>    
+                {% endif %}
+            {% endwith %}    
+        </div>
 </div>
 
 
