--- a/connectedin.por_fazer/perfis/templates/perfil.html
+++ b/connectedin.por_fazer/perfis/templates/perfil.html
@@ -14,10 +14,12 @@
 			</a>
 
 			<br>
+		{% endif %}
 
-			<a href = "{% url 'bloquear' perfil.id %}">
+		{% if perfil.id != perfil_logado.id %}	
+			<a class="cd-popup-trigger">
 				Bloquear perfil
-			</a>
+			</a> 
 
 			<hr/>
 			{% if perfil_logado.superuser and not perfil.superuser %}
@@ -31,6 +33,43 @@
 
 </div>
 
+<div class="cd-popup" role="alert">
+	<div class="cd-popup-container">
+		<p>Tem certeza que deseja deletar?</p>
+		<ul>
+			<li><a  href = "{% url 'bloquear' perfil.id %}">Yes</a></li>
+			<li><a  class="cd-popup-no">No</a></li>
+		</ul>
+		<a  class="cd-popup-close">X</a>
+	</div> 
+</div> 
+<script>
+jQuery(document).ready(function($){
+	//open popup
+	$('.cd-popup-trigger').on('click', function(event){
+		event.preventDefault();
+		$('.cd-popup').addClass('is-visible');
+	});
+	
+	//close popup
+	$('.cd-popup').on('click', function(event){
+		if( $(event.target).is('.cd-popup-close') || $(event.target).is('.cd-popup') ) {
+			event.preventDefault();
+			$(this).removeClass('is-visible');
+		}
+	});
+	//close popup
+	$('.cd-popup-no').on('click', function(event){
+		$('.cd-popup').removeClass('is-visible');
+	});
+	//close popup when clicking the esc keyboard button
+	$(document).keyup(function(event){
+    	if(event.which=='27'){
+    		$('.cd-popup').removeClass('is-visible');
+	    }
+    });
+});
+</script>
 
 <div class="col-lg-3">
 	{% if perfil.id == perfil_logado.id %}
