--- a/connectedin.por_fazer/perfis/templates/perfil.html
+++ b/connectedin.por_fazer/perfis/templates/perfil.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
-<div class = "col-lg-9">
+<div class = "col-lg-12">
+		
 		<h2 style="margin-top: 0px">{{ perfil.nome }}</h2>
 		<address>			
 			Email: <a href = "mailto:{{ perfil.email }}">{{ perfil.email }}</a>
@@ -17,10 +18,9 @@
 		{% endif %}
 
 		{% if perfil.id != perfil_logado.id %}	
-			<a class="cd-popup-trigger">
-				Bloquear perfil
-			</a> 
-
+		
+			<a href="{% url 'bloquear' perfil.id %}">Bloquear Perfil</a>
+ 
 			<hr/>
 			{% if perfil_logado.superuser and not perfil.superuser %}
 				<a href = "{% url 'super' perfil.id %}">
@@ -31,52 +31,15 @@
 		{% endif %}
 
 
-</div>
-
-<div class="cd-popup" role="alert">
-	<div class="cd-popup-container">
-		<p>Tem certeza que deseja deletar?</p>
-		<ul>
-			<li><a  href = "{% url 'bloquear' perfil.id %}">Yes</a></li>
-			<li><a  class="cd-popup-no">No</a></li>
-		</ul>
-		<a  class="cd-popup-close">X</a>
-	</div> 
-</div> 
-<script>
-jQuery(document).ready(function($){
-	//open popup
-	$('.cd-popup-trigger').on('click', function(event){
-		event.preventDefault();
-		$('.cd-popup').addClass('is-visible');
-	});
-	
-	//close popup
-	$('.cd-popup').on('click', function(event){
-		if( $(event.target).is('.cd-popup-close') || $(event.target).is('.cd-popup') ) {
-			event.preventDefault();
-			$(this).removeClass('is-visible');
-		}
-	});
-	//close popup
-	$('.cd-popup-no').on('click', function(event){
-		$('.cd-popup').removeClass('is-visible');
-	});
-	//close popup when clicking the esc keyboard button
-	$(document).keyup(function(event){
-    	if(event.which=='27'){
-    		$('.cd-popup').removeClass('is-visible');
-	    }
-    });
-});
-</script>
-
-<div class="col-lg-3">
-	{% if perfil.id == perfil_logado.id %}
+		{% if perfil.id == perfil_logado.id %}
 		<a href = "{% url 'form_redefinir_senha' %}">
 			Redefinir senha
 		</a>
 
 	{% endif %}
+
 </div>
+
+
+
 {% endblock %}		
