--- a/connectedin.por_fazer/perfis/static/styles/main.css
+++ b/connectedin.por_fazer/perfis/static/styles/main.css
@@ -47,3 +47,27 @@ body {
   font-size: 21px;
   padding: 14px 24px;
 }
+.content {
+  margin: 40px 0;
+}
+.content p + h4 {
+  margin-top: 28px;
+}
+
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .content,
+  .footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .header {
+    margin-bottom: 30px;
+  }
+
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
