--- a/connectedin.por_fazer/usuarios/templates/login.html
+++ b/connectedin.por_fazer/usuarios/templates/login.html
@@ -22,6 +22,7 @@
 		{% endif %}
 
 		<a href="{% url 'registrar' %}">registre-se</a>
+		<a href="{% url 'password_reset' %}">esqueci a senha</a>
 	</form>
 
 {% endblock %}
