Corrigindo bugs com bloqueio de usuarios, para isso foi adicionado a classe bloqueio

--- a/connectedin.por_fazer/perfis/templates/perfil.html
+++ b/connectedin.por_fazer/perfis/templates/perfil.html
@@ -20,8 +20,28 @@
 
 		{% if perfil.id != perfil_logado.id %}	
 		
-			<a href="{% url 'bloquear' perfil.id %}">Bloquear Perfil</a>
- 
+			
+
+			<button class="btn btn-default" id="btn-confirm">Bloquear Perfil</button>
+
+			<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="mi-modal">
+			  <div class="modal-dialog modal-sm">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			        <h4 class="modal-title" id="myModalLabel">Deseja realmente apagar o perfil?</h4>
+			      </div>
+			      <div class="modal-footer">
+					<p><a class="btn btn-default cd-popup-no" href="{% url 'exibir' perfil.id %}">Cancelar</a>
+						<a class="btn btn-default" href = "{% url 'bloquear' perfil.id %}">Bloquear</a>
+					</p>
+
+			      </div>
+			    </div>
+			  </div>
+			</div>
+
+
 			<hr/>
 			{% if perfil_logado.superuser and not perfil.superuser %}
 				<a href = "{% url 'super' perfil.id %}">
@@ -41,6 +61,27 @@
 
 </div>
 
+<script type="text/javascript">
+	var modalConfirm = function(callback){
+  
+  $("#btn-confirm").on("click", function(){
+    $("#mi-modal").modal('show');
+  });
 
+  $("#modal-btn-si").on("click", function(){
+    callback(true);
+    $("#mi-modal").modal('hide');
+  });
+  
+  $("#modal-btn-no").on("click", function(){
+    callback(false);
+    $("#mi-modal").modal('hide');
+  });
+};
+
+modalConfirm(function(confirm){
+  
+});
+</script>
 
 {% endblock %}		
