--- a/connectedin.por_fazer/perfis/templates/index.html
+++ b/connectedin.por_fazer/perfis/templates/index.html
@@ -101,7 +101,7 @@
     
     
     <div class="panel panel-default">
-            {% with total=perfil_logado.contatos_bloqueados.count %}
+            {% with total=perfil_logado.meus_bloqueios.count %}
                 {% if total %}
                     <div class="panel-heading">
                         <strong> {{ total }}  
@@ -109,7 +109,7 @@
                         </strong>
                     </div>
                     <ul class="list-group">
-                        {% for perfil in perfil_logado.contatos_bloqueados.all %}
+                        {% for perfil in perfil_logado.meus_bloqueios.all %}
                             <li class = "list-group-item">
                                 <a href = "{% url 'exibir' perfil.id %}">
                                     {{ perfil }}
@@ -140,11 +140,35 @@
                 <ul class="list-group">
                     {% for postagem in perfil_logado.timeline %}
                         <li class = "list-group-item">
-                                {{ postagem }}
-                            
-                            {% if postagem.dono.id == perfil_logado.id %}
-                                <a class = "pull-right" href = "{% url 'excluir_postagem' postagem.id %}">excluir</a>
+                                <h3> {{ postagem.dono }} </h3>
+                                <p>{{ postagem }}</p>
+                                {% if postagem.dono.id == perfil_logado.id %}
+                                <button class="btn btn-default pull-right" id="btn-confirm">Excluir</button>
+
+                                <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="mi-modal">
+                                  <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">Deseja realmente excluir a postagem?</h4>
+                                      </div>
+                                      <div class="modal-footer">
+                                        <p><a class="btn btn-default cd-popup-no" href="{% url 'index' %}">Cancelar</a>
+                                            <a class="btn btn-default" href = "{% url 'excluir_postagem' postagem.id %}">Excluir</a>
+                                        </p>
+
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+
+                                
                             {% endif %}
+                            
+                            <h5>{{postagem.data_publicacao}}</h5>   
+
+                            
+                            
                             
                         </li>
                     {% endfor %}
@@ -157,6 +181,29 @@
         </div>
 </div>
 
+
+<script type="text/javascript">
+    var modalConfirm = function(callback){
+  
+  $("#btn-confirm").on("click", function(){
+    $("#mi-modal").modal('show');
+  });
+
+  $("#modal-btn-si").on("click", function(){
+    callback(true);
+    $("#mi-modal").modal('hide');
+  });
+  
+  $("#modal-btn-no").on("click", function(){
+    callback(false);
+    $("#mi-modal").modal('hide');
+  });
+};
+
+modalConfirm(function(confirm){
+  
+});
+</script>
 
 
 {% endblock %}
