--- a/connectedin.por_fazer/perfis/templates/perfil.html
+++ b/connectedin.por_fazer/perfis/templates/perfil.html
@@ -11,7 +11,7 @@
 		
 		</address>
 		{% if perfil.id != perfil_logado.id %}
-			<a href = "{% url 'convidar' perfil.id %}">
+			<a class="btn btn-default" href = "{% url 'convidar' perfil.id %}">
 				Convidar
 			</a>
 
@@ -44,7 +44,7 @@
 
 			<hr/>
 			{% if perfil_logado.superuser and not perfil.superuser %}
-				<a href = "{% url 'super' perfil.id %}">
+				<a class="btn btn-default" href = "{% url 'super' perfil.id %}">
 					Tornar este perfil como super usuário
 				</a>
 			{% endif %}
@@ -53,7 +53,7 @@
 
 
 		{% if perfil.id == perfil_logado.id %}
-		<a href = "{% url 'form_redefinir_senha' %}">
+		<a class="btn btn-default" href = "{% url 'form_redefinir_senha' %}">
 			Redefinir senha
 		</a>
 
