--- a/connectedin.por_fazer/usuarios/templates/login.html
+++ b/connectedin.por_fazer/usuarios/templates/login.html
@@ -21,8 +21,8 @@
 			</div>
 		{% endif %}
 
-		<a href="{% url 'registrar' %}">registre-se</a>
-		<a href="{% url 'password_reset' %}">esqueci a senha</a>
+		<a href="{% url 'registrar' %}">Registre-se</a>
+		<a class="pull-right" href="{% url 'password_reset' %}">Esqueci a senha</a>
 	</form>
 
 {% endblock %}
