--- a/connectedin.por_fazer/perfis/templates/password_reset_complete.html
+++ b/connectedin.por_fazer/perfis/templates/password_reset_complete.html
@@ -2,7 +2,7 @@
 
 {% block title %}Senha alterada com sucesso!{% endblock %}
 
-{% block content %}
+{% block body %}
 <h1>Senha alterada com sucesso!</h1>
 <p>Você alterou a sua senha, você pode se logar <a href="{% url 'login' %}">aqui</a>.</p>
 {% endblock %}
