--- a/connectedin.por_fazer/perfis/templates/password_reset_done.html
+++ b/connectedin.por_fazer/perfis/templates/password_reset_done.html
@@ -2,7 +2,7 @@
 
 {% block title %}Email Sent{% endblock %}
 
-{% block content %}
+{% block body %}
   <h1>Olha a sua caixa de mensagens.</h1>
   <p>Nós enviamos um e-mail com as instruções de recuperação de senha. Você receberá em breve!</p>
 {% endblock %}
