Adicionando scrolls e corrigindo bugs no alert

--- a/ProjetoFinal/perfis/templates/perfil.html
+++ b/ProjetoFinal/perfis/templates/perfil.html
@@ -22,7 +22,7 @@
 				
 					
 
-					<button class="btn btn-default" id="btn-confirm">Bloquear Perfil</button>
+					<button class="btn btn-default btn-confirm">Bloquear Perfil</button>
 
 					<div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="mi-modal">
 						<div class="modal-dialog modal-sm">
@@ -68,7 +68,7 @@
 <script type="text/javascript">
 	var modalConfirm = function(callback){
   
-  $("#btn-confirm").on("click", function(){
+  $(".btn-confirm").on("click", function(){
     $("#mi-modal").modal('show');
   });
 
