--- a/ProjetoFinal/perfis/templates/index.html
+++ b/ProjetoFinal/perfis/templates/index.html
@@ -5,24 +5,29 @@
 <div class="row">
 
     <div class="col-lg-3">
-        <div class="panel panel-default" style="overflow-y: scroll; height: 200px;">
+        <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>Todos os perfis</strong>
+                <strong>Sugestões de amizade</strong>
             </div>
             {% if perfis %}
+            <div style="overflow-y: scroll; height: 200px;">    
             <ul class="list-group">
                 {% for perfil in perfis %}
-                {% if perfil.nome != perfil_logado.nome %}
+                {% if perfil.nome != perfil_logado.nome and perfil not in perfil_logado.contatos.all and perfil not in perfil_logado.bloqueados %}
                 <li class="list-group-item">
-                    <a href="{% url 'exibir' perfil.id %}"> {{ perfil.nome }} / {{ perfil.email }}
+                    <a href="{% url 'exibir' perfil.id %}"> {{ perfil.nome }} 
                     </a>
                 </li>
                 {% endif %}
                 {% endfor %}
+                
+            </ul>
                 {% else %}
                 <p>Não há perfis cadastrados</p>
                 {% endif %}
-            </ul>
+
+        </div>
+            
         </div>
 
 
@@ -72,7 +77,7 @@
         <br>
         <br>
 
-        <div class="panel panel-default" style="overflow-y: scroll; height: 200px;">
+        <div class="panel panel-default" >
             {% with total=perfil_logado.meus_bloqueios.count %}
             {% if total %}
             <div class="panel-heading">
@@ -80,6 +85,8 @@
                     Contato{{ total|pluralize }} bloqueado{{ total|pluralize }}
                 </strong>
             </div>
+
+            <div style="overflow-y: scroll; height: 200px;">
             <ul class="list-group">
                 {% for bloqueio in perfil_logado.meus_bloqueios.all %}
                 <li class="list-group-item">
@@ -91,6 +98,7 @@
                 </li>
                 {% endfor %}
             </ul>
+        </div>
             {% else %}
             <div class="panel-body">
                 Não há contatos bloqueados
@@ -114,7 +122,7 @@
                     <h3> {{ postagem.dono }} </h3>
                     <p>{{ postagem }}</p>
                     {% if postagem.dono.id == perfil_logado.id %}
-                    <button class="btn btn-danger pull-right" id="btn-confirm">Excluir</button>
+                    <button class="btn btn-danger pull-right btn-confirm">Excluir</button>
 
                     <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true"
                         id="mi-modal">
@@ -185,7 +193,7 @@
 
 
         </div>
-        <div class="panel panel-default" style="overflow-y: scroll; height: 200px;">
+        <div class="panel panel-default">
             {% with total=perfil_logado.convites_feitos.count %}
 
             {% if total %}
@@ -193,11 +201,13 @@
                 <strong> {{ total }}
                     Convite{{ total|pluralize }} enviado{{ total|pluralize }}</strong>
             </div>
+
+            <div class="panel panel-default" style="overflow-y: scroll; height: 200px;">
             <ul class="list-group">
                 {% for convite in perfil_logado.convites_feitos.all %}
                 <li class="list-group-item">
                     <p>
-                        <a href="{% url 'exibir' convite.solicitante.id %}">
+                        <a href="{% url 'exibir' convite.convidado.id %}">
                             {{convite.convidado.nome}}
                         </a>
 
@@ -212,13 +222,14 @@
             {% endif %}
             {% endwith %}
         </div>
+        </div>
     </div>
 </div>
 
 <script type="text/javascript">
     var modalConfirm = function (callback) {
 
-        $("#btn-confirm").on("click", function () {
+        $(".btn-confirm").on("click", function () {
             $("#mi-modal").modal('show');
         });
 
