--- a/ProjetoFinal/perfis/templates/perfil.html
+++ b/ProjetoFinal/perfis/templates/perfil.html
@@ -1,8 +1,45 @@
 {% extends 'base.html' %}
 {% block body %}
-<div class = "col-lg-12">
+
 		
 		{% if posso_exibir %}
+
+		<div class="col-lg-3">
+			<div class="panel panel-default " style="width:250px;" >
+            {% with total=perfil_logado.meus_bloqueios.count %}
+            {% if total %}
+            <div class="panel-heading">
+                <strong> {{ total }}
+                    Contato{{ total|pluralize }} bloqueado{{ total|pluralize }}
+                </strong>
+            </div>
+
+            <div style="overflow-y: scroll; height: 200px;">
+            <ul class="list-group">
+                {% for bloqueio in perfil_logado.meus_bloqueios.all %}
+                <li class="list-group-item">
+                    <p><a href="{% url 'exibir' bloqueio.bloqueado.id %}">
+                            {{ bloqueio }}
+                        </a>
+                        <a class="btn btn-default pull-right" href="{% url 'desbloquear' bloqueio.id %}">desbloquear</a>
+                    </p>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+            {% else %}
+            <div class="panel-body">
+                Não há contatos bloqueados
+            </div>
+            {% endif %}
+            {% endwith %}
+        	</div>
+		</div>
+			
+
+		<div class = "col-lg-6">
+
+			<div>
 				<h2 style="margin-top: 0px">{{ perfil.nome }}</h2>
 				<address>			
 					Email: <a href = "mailto:{{ perfil.email }}">{{ perfil.email }}</a>
@@ -18,9 +55,13 @@
 					<br>
 				{% endif %}
 
-				{% if posso_bloquear %}	
-				
-					
+			</div>
+		</div>
+
+			
+
+		<div class = "col-lg-3">
+			{% if posso_bloquear %}	
 
 					<button class="btn btn-default btn-confirm">Bloquear Perfil</button>
 
@@ -51,19 +92,20 @@
 					
 				{% endif %}
 
-
 				{% if perfil.id == perfil_logado.id %}
+
 				<a class="btn btn-default" href = "{% url 'form_redefinir_senha' %}">
 					Redefinir senha
 				</a>
 
 			{% endif %}
+			</div>
 		{% else %}
 			<h1>Usuário não existe</h1>
 
 		{% endif %}			
 
-</div>
+
 
 <script type="text/javascript">
 	var modalConfirm = function(callback){
