--- a/ProjetoFinal/perfis/templates/perfil.html
+++ b/ProjetoFinal/perfis/templates/perfil.html
@@ -4,40 +4,8 @@
 		
 		{% if posso_exibir %}
 
-		<div class="col-lg-3">
-			<div class="panel panel-default " style="width:250px;" >
-            {% with total=perfil_logado.meus_bloqueios.count %}
-            {% if total %}
-            <div class="panel-heading">
-                <strong> {{ total }}
-                    Contato{{ total|pluralize }} bloqueado{{ total|pluralize }}
-                </strong>
-            </div>
 
-            <div style="overflow-y: scroll; height: 200px;">
-            <ul class="list-group">
-                {% for bloqueio in perfil_logado.meus_bloqueios.all %}
-                <li class="list-group-item">
-                    <p><a href="{% url 'exibir' bloqueio.bloqueado.id %}">
-                            {{ bloqueio }}
-                        </a>
-                        <a class="btn btn-default pull-right" href="{% url 'desbloquear' bloqueio.id %}">desbloquear</a>
-                    </p>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-            {% else %}
-            <div class="panel-body">
-                Não há contatos bloqueados
-            </div>
-            {% endif %}
-            {% endwith %}
-        	</div>
-		</div>
-			
-
-		<div class = "col-lg-6">
+		<div class = "col-lg-4">
 
 			<div>
 				<h2 style="margin-top: 0px">{{ perfil.nome }}</h2>
@@ -55,9 +23,74 @@
 					<br>
 				{% endif %}
 
+				{% if perfil.id == perfil_logado.id %}
+
+				<a class="btn btn-default" href = "{% url 'form_redefinir_senha' %}">
+					Redefinir senha
+				</a>
+
+			{% endif %}
+
 			</div>
 		</div>
 
+		
+		<div class="col-lg-5">
+
+			{% if perfil.minhas_postagens.all %}
+            <div class="panel-heading">
+                <strong>
+                    Postagens
+                </strong>
+            </div>
+            <ul class="list-group">
+                {% for postagem in perfil.minhas_postagens.all %}
+                <li class="list-group-item">
+                    <h3> {{ postagem.dono }} </h3>
+                    <p>{{ postagem }}</p>
+                    {% if postagem.dono.id == perfil_logado.id or perfil_logado.superuser %}
+                    <button class="btn btn-danger pull-right btn-confirm">Excluir</button>
+
+                    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true"
+                        id="mi-modal">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                            aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title" id="myModalLabel">Deseja realmente excluir a postagem?</h4>
+                                </div>
+                                <div class="modal-footer">
+                                    <p><a class="btn btn-default cd-popup-no" href="{% url 'index' %}">Cancelar</a>
+                                        <a class="btn btn-default" href="{% url 'excluir_postagem' postagem.id %}">Excluir</a>
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    
+
+                    <h5>{{postagem.data_publicacao}}</h5>
+
+
+                </li>
+				{% endif %}
+                {% endfor %}
+            </ul>
+            {% else %}
+            <div class="panel-body">
+                <strong> {{ total }}
+                    Esse perfil ainda não publicou.
+                </strong>
+            </div>
+            {% endif %}
+			
+			
+			
+		</div>
 			
 
 		<div class = "col-lg-3">
@@ -92,13 +125,41 @@
 					
 				{% endif %}
 
-				{% if perfil.id == perfil_logado.id %}
+				{% if perfil_logado.id == perfil.id %}
+			<div class="panel panel-default  " style="width:250px;" >
+            {% with total=perfil_logado.meus_bloqueios.count %}
+            {% if total %}
+            <div class="panel-heading">
+                <strong> {{ total }}
+                    Contato{{ total|pluralize }} bloqueado{{ total|pluralize }}
+                </strong>
+            </div>
 
-				<a class="btn btn-default" href = "{% url 'form_redefinir_senha' %}">
-					Redefinir senha
-				</a>
-
+            <div style="overflow-y: scroll; height: 200px;">
+            <ul class="list-group">
+                {% for bloqueio in perfil_logado.meus_bloqueios.all %}
+                <li class="list-group-item">
+                    <p><a href="{% url 'exibir' bloqueio.bloqueado.id %}">
+                            {{ bloqueio }}
+                        </a>
+                        <a class="btn btn-default pull-right" href="{% url 'desbloquear' bloqueio.id %}">desbloquear</a>
+                    </p>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+            {% else %}
+            <div class="panel-body">
+                Não há contatos bloqueados
+            </div>
+            {% endif %}
+            {% endwith %}
+        	</div>
 			{% endif %}
+
+				
+
+			
 			</div>
 		{% else %}
 			<h1>Usuário não existe</h1>
